2002-11-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/gschemdoc.sh: Added %20filetype:pdf to the google search
	to increase the likelyhood of getting the datasheet.  Suggested by
	Antonio A Todo Bom.

2002-11-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/gschupdate, scripts/symupdate: Oops, these scripts will
	break if an attribute has a ='s in it.  Fixed this by passing 2 as
	the LIMIT to perl's split.

        * configure.in: Updated version to 20021103 (an official version)

2002-10-31 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/gschemdoc.sh: Changed the manual which is brought up when
	you run gschemdoc -m (from gschem.txt go gedadocs.html).

	* scripts/gschemdoc.sh: Added phoenix to the list of browsers.

	* scripts/gschemdoc.sh: Added another echo to output which browser
	has been found.

2002-10-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/olib.l geda_sym_format.h: Added Mario Pascucci's olib converter.

	* README.olib: Added README for above.

2002-10-28 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Bumped version to 20021031

2002-10-27 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure and friends: Ran "autoreconf --force --install -v" 
	to really upgrade to the newest version of the auto* tools.

	* scripts/gschemdoc: Applied Egil's patch to remove the -- for
	Netscape and Mozilla

	* gschlas/g_rc.c, g_register.c, i_vars.c, include/i_vars.h: Added
	force-boundingbox rc variable.

	* lib/system-gschlas.in: Added default for force-boundingbox variable

2002-10-19 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in, *.m4: Upgraded to automake 1.7.1 and autoconf 2.54
	
2002-10-17 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in, scripts/Makefile.am, scripts/config.sh.in, 
	scripts/gschemdoc.sh: Added find documentation patch from Egil 
	Kvaleberg.  Thanks.

2002-10-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/sarlacc_schem.c, scripts/sarlacc_sym: Added updates from
	Egil Kvaleberg.  Thanks.
